Corrected images sliding behind text of actor

--- a/app/assets/stylesheets/pages/_actor_show.scss
+++ b/app/assets/stylesheets/pages/_actor_show.scss
@@ -122,7 +122,7 @@
 
   .actor-infos-col {
     width: 100%;
-    margin-top: 24px !important;
+    padding-top: 24px !important;
   }
 
   .actor-img-border {
